# ssdeep-rs

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md
libfuzzy-sys/: Cargo.toml  README.md  build.rs  lib.rs
libfuzzy-sys/libfuzzy/: .gitignore  Makefile.in  config.h.in  configure
src/: lib.rs
tests/: file.txt  tests.rs
